# books-api

./: .gitignore  README.md  codegen.yml  package-lock.json  package.json  pyproject.toml  schema.graphql  tailwind.config.js
alembic/: env.py
alembic/versions/: 0ae5a0af5674_create_publishers.py  160a88161427_add_the_books_table.py  830b301dfe1d_add_the_authors_table.py  f2e1d6538e26_add_isbn13_to_books.py
api/: main.py  queue.py
api/concepts/author/: __init__.py  model.py  type.py
api/concepts/book/: __init__.py  model.py  type.py
api/concepts/publisher/: __init__.py  model.py  type.py
api/graphql/: __init__.py  connection.py  context.py  edge.py  helpers.py  query.py  schema.py  subscription.py
api/graphql/pagination/: __init__.py  connection.py  helpers.py
api/helpers/: db.py  redis.py
api/models/: __init__.py  author.py  book.py  publisher.py
client/: index.html
client/queries/: getAllBooks.graphql  getPi.graphql
client/ts/: Books.tsx  PiSeries.tsx  index.tsx  lib.ts
