[tool.poetry]
name = "graphql-test"
version = "0.1.0"
description = ""
authors = ["Josue Montano <josuemontanoa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
pydantic = "^1.9.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.108.3"}
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = "^1.4.35"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"
alembic = "^1.7.7"
pendulum = "^2.1.2"
SQLAlchemy-Utils = "^0.38.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
